--- a/app/views/psd-cases-area/index.html
+++ b/app/views/psd-cases-area/index.html
@@ -53,7 +53,7 @@
                 1. My cases:
             </h2>
 
-            <p class="govuk-body">When the user selects the "Cases" option from the top level navigation, the user now lands on the "My cases" page. <small><i>(This can soon be revised with the addition of an actual Cases landing page).</i></small> The "Cases" active state remains active for all 3 pages. The list of open cases are automatically ordered by most recently created.</p>
+            <p class="govuk-body">When the user selects the "Cases" option from the top level navigation, the user now lands on the "My cases" page. <i>(This can soon be revised with the addition of an actual Cases landing page).</i> The "Cases" active state remains active for all 3 pages. The list of open cases are automatically ordered by most recently created.</p>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
@@ -61,7 +61,7 @@
 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
-                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/no-cases-example-1.html" target="_blank">My cases - no cases</a>
+                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/no-cases-example.html" target="_blank">My cases - no cases</a>
                         </li>
                       
                     </ul>
@@ -72,37 +72,42 @@
                 2. Team cases:
             </h2>
 
+            <p class="govuk-body">As 'My cases' with different H1 title and H1 hint text.</p>
+
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/team-cases.html" target="_blank">Team cases</a>
+
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/no-team-cases-example.html" target="_blank">Team cases - no cases</a> 
+                        </li>
+                      
+                    </ul>                    
+                </li>
+            </ul>             
 
             <h2 class="govuk-heading-s">
                 3. All cases - Search:
             </h2>  
+
+            <p class="govuk-body">This is the current Cases seach page (no change in functionality); updates have been made to the H1 title and 'help' link text, the main hint text, and help text has been updated. (Keywords moved to new row, margin/padding and input width classes changed, new <abbr>ID</abbr> "page-content" added to main section. Changes to styling on the Filters title and "sub-titles"). </p>
             
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/all-cases-2.html" target="_blank">All cases - Search</a>. This is the current Cases seach page (no change in functionality); updates have been made to the H1 title and 'help' link text and a main hint text added. <small><i>(Keywords moved to new row, margin/padding and input width classes changed, new ID "page-content" added to main section).</i></small>
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/all-cases.html" target="_blank">All cases - Search</a>. 
 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
-                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/all-cases-2.html" target="_blank">All cases - Search: Alternative design</a>
+                            <a style="text-decoration: line-through;" class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/all-cases-1.html" target="_blank">All cases - Search: Alternative design</a>
                         </li>
-                      
                     </ul>
                 </li>
             </ul> 
-
-            
             
             <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-            <p class="govuk-body">All pages/lists/tables follow the same established logic: 20 items per list, table footers only when there are 12 or more items,pagination when there are 20 or more items, etc. And the logic for the overview statement remains the same but with amended language: e.g, for 'My cases'</p>
-
-            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-                <li>
-                    Lorem ipsum 
-                </li>
-            </ul>
-            
-            <p class="govuk-body">The help text second paragraph has been updated, but is the same across all three pages.</p>
+            <p class="govuk-body">All pages/lists/tables follow the same established logic: 20 items per list, table footers only when there are 12 or more items, pagination when there are 20 or more items, etc. 
 
         </div>
             
