--- a/app/views/responsible-person-address/responsible-person-address_alt.html
+++ b/app/views/responsible-person-address/responsible-person-address_alt.html
@@ -151,7 +151,7 @@
                 </div>
 
                 <button class="govuk-button" data-module="govuk-button">
-                    Continue
+                    Save and continue
                 </button>
 
             </fieldset>
