--- a/app/views/responsible-person-address/responsible-person-address_updates.html
+++ b/app/views/responsible-person-address/responsible-person-address_updates.html
@@ -43,17 +43,26 @@
           </div>
       </details>        
     
-        <div class="govuk-warning-text govuk-!-margin-top-7 govuk-!-margin-bottom-6">
+
+    
+        <div class="govuk-warning-text govuk-!-margin-bottom-0 govuk-!-margin-top-7 opss-warning-text--s">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             
-            <strong class="govuk-warning-text__text govuk-!-font-size-16 govuk-!-margin-bottom-4">
-                <span class="govuk-warning-text__assistive">Warning</span> You must update your cosmetic product labels with your new address. Any cosmetic products you have notified will be associated with the new address. You will not need to submit a new notification.
+            <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                You must update your cosmetic product labels with your new address. Any cosmetic products you have notified will be associated with the new address. You will not need to submit a new notification. 
             </strong>
-
-            <strong class="govuk-warning-text__text govuk-!-font-size-16">
-                <span class="govuk-warning-text__assistive">Warning</span> The <abbr>UK</abbr> address provided must not be a <abbr>PO</abbr> box or mail forwarding address. These are not <abbr>UK</abbr> established addresses that comply with the regulation.
-            </strong>            
         </div>
+        <div class="govuk-warning-text govuk-!-margin-top-0 govuk-!-margin-bottom-6 opss-warning-text--s">
+            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+            
+            <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                The <abbr>UK</abbr> address provided must not be a <abbr>PO</abbr> box or mail forwarding address. These are not <abbr>UK</abbr> established addresses that comply with the regulation.
+            </strong>
+        </div> 
+
+
 
       </div>
     </div>
