--- a/app/views/psd-cases-area/my-cases.html
+++ b/app/views/psd-cases-area/my-cases.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-02.html" %}
 
 {% block pageTitle %}
-    Page designs for revised PSD create a case journey
+    My cases
 {% endblock %}
 
 
@@ -28,7 +28,7 @@
     </div>
 </div>
 
-<div class="govuk-grid-row opss-full-height govuk-!-padding-top-9">
+<div class="govuk-grid-row opss-full-height govuk-!-margin-top-7 govuk-!-padding-top-9">
 
     <section class="govuk-grid-column-one-quarter govuk-!-padding-right-1 opss-full-height__col">
 
@@ -45,7 +45,7 @@
                     <a href="/psd-cases-area/team-cases.html" class="govuk-link govuk-link--no-visited-state">Team cases</a>
                 </li>
                 <li>
-                    <a href="/psd-cases-area/all-cases-2.html" class="govuk-link govuk-link--no-visited-state">All cases &ndash; Search</a>
+                    <a href="/psd-cases-area/all-cases.html" class="govuk-link govuk-link--no-visited-state">All cases &ndash; Search</a>
                 </li>
             </ul>
         </nav>
@@ -57,7 +57,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full" role="region" aria-label="Cases">
 
-                <table id="results" class="govuk-table opss-table-items opss-table-items--sm">
+                <table class="govuk-table opss-table-items opss-table-items--sm">
                     <caption class="govuk-visually-hidden">
                         Cases data: 4 columns with each case described across rows within each table body.
                     </caption>
